--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
   ],
   "homepage": "https://www.liguangchun.cn",
   "require": {
-    "php": ">=7.0"
+    "php": ">=7.0",
+    "ext-json": "*",
+    "ext-curl": "*"
   },
   "autoload": {
     "psr-4": {
